--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ openai==1.16.1
 httpx==0.27.0
 pinecone-client==3.2.2
 pymongo==4.6.1
-python-dateutil==2.8.2 
+python-dateutil==2.8.2
+tavily-python>=0.4.0 
